Add dct:source to properties-uplift.yml

--- a/generic/uplift/properties-uplift.yml
+++ b/generic/uplift/properties-uplift.yml
@@ -40,3 +40,4 @@ context:
     broadMatch: skos:broadMatch
     narrowMatch: skos:narrowMatch
     exactMatch: skos:exactMatch
+    sources: dct:source
