Change source to use seeAlso

--- a/generic/uplift/properties-uplift.yml
+++ b/generic/uplift/properties-uplift.yml
@@ -45,4 +45,7 @@ context:
       '@type': '@id'
       '@context':  
         'label': rdfs:label
-        'url': '@id'
+        'url':
+          '@id': 'rdfs:seeAlso'
+          '@type': '@id'
+        
