Use skos:prefLabel for sources, too

--- a/generic/uplift/properties-uplift.yml
+++ b/generic/uplift/properties-uplift.yml
@@ -44,7 +44,7 @@ context:
       '@id': dct:source
       '@type': '@id'
       '@context':  
-        'label': rdfs:label
+        'label': skos:prefLabel
         'url':
           '@id': 'rdfs:seeAlso'
           '@type': '@id'
