--- a/generic/uplift/properties-uplift.yml
+++ b/generic/uplift/properties-uplift.yml
@@ -19,6 +19,7 @@ context:
     dct: http://purl.org/dc/terms/
     sosa: http://www.w3.org/ns/sosa/
     owl: http://www.w3.org/2002/07/owl#
+    foaf: http://xmlns.com/foaf/0.1/
     label: skos:prefLabel
     'properties':
       '@reverse': 'skos:inScheme'
@@ -46,6 +47,6 @@ context:
       '@context':  
         'label': skos:prefLabel
         'url':
-          '@id': 'rdfs:seeAlso'
+          '@id': foaf:homepage
           '@type': '@id'
         
