Move rainbow stuff into rainbow-data

--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -60,12 +60,12 @@ jobs:
                               yield (file, name, key, url, info)
 
 
-          properties = load_yaml("generic/properties.yml")["properties"]
-          sensors = load_yaml("generic/sensors.yml")["sensors"]
+          properties = load_yaml("rainbow-data/generic/properties.yml")["properties"]
+          sensors = load_yaml("rainbow-data/generic/sensors.yml")["sensors"]
 
           issues = [
-              *check_urls_on_keys("generic/properties.yml", properties, ["sameAs", "seeAlso"]),
-              *check_urls_on_keys("generic/sensors.yml", properties, ["references"]),
+              *check_urls_on_keys("rainbow-data/generic/properties.yml", properties, ["sameAs", "seeAlso"]),
+              *check_urls_on_keys("rainbow-data/generic/sensors.yml", properties, ["references"]),
           ]
 
           if issues:
