--- a/rainbow-data/generic/sensor-platforms.yml
+++ b/rainbow-data/generic/sensor-platforms.yml
@@ -7,15 +7,19 @@ platforms:
 
   ## Format for sensor platforms:
   # id:                                                 # URI slug
-  #   label: Label for the term                         # Required
+  #   label:                                            # Label for the term, required
   #   manufacturers:                                    # List of manufacturers (omit if unknown or "various")
   #     - manufacturer1                                 #   refers to the key for the manufacturer entry in sensor-manufacturers.yml
-  #   sensors:                                          # Required
+  #   sensors:                                          # List of sensors, required
   #     - sensor1                                       #   refers to the key for the sensor entry in sensors.yml
-  #   description: Term description                     # Optional
+  #   description:                                      # Term description, optional
+  #   sources:                                          # Websites from which the description was acquired (non-semantic), optional
+  #     - https://example.com/description
+  #     - label: My source
+  #       url: https://example.com/description
+  #   references:                                       # List of websites with definitions, data sheets, etc. (non-semantic), optional
+  #     - https://en.wikipedia.org/wiki/Term
   #   sameAs:                                           # List of "same as" URIs, optional
   #     - https://another.vocabulary.com/another/term
-  #   references:                                       # List of websites with definitions, data sheets, etc. (non-semantic)
+  #   seeAlso:                                          # List of websites with definitions (non-semantic), optional
   #     - https://en.wikipedia.org/wiki/Term
-
-
