--- a/rainbow-data/generic/procedures.yml
+++ b/rainbow-data/generic/procedures.yml
@@ -6,14 +6,19 @@ label: AD4GD water quality observation procedures         # Label for collection
 procedures:
   ## Format for procedures (same as properties):
   # id:                                                 # URI slug
-  #   label: Label for the term                         # Required
-  #   description: Term description                     # Optional
+  #   label:                                            # Label for the term, required
+  #   description:                                      # Term description, optional
+  #   sources:                                          # Websites from which the description was acquired (non-semantic), optional
+  #     - https://example.com/description
+  #     - label: My source
+  #       url: https://example.com/description
+  #   references:                                       # List of websites with definitions, data sheets, etc. (non-semantic), optional
+  #     - https://en.wikipedia.org/wiki/Term
   #   sameAs:                                           # List of "same as" URIs, optional
   #     - https://another.vocabulary.com/another/term
-  #   seeAlso:                                          # List of websites with definitions (non-semantic)
+  #   seeAlso:                                          # List of websites with definitions (non-semantic), optional
   #     - https://en.wikipedia.org/wiki/Term
-  #   hasBroader:                                       # List of terms that are more generic than this one.
+  #   hasBroader:                                       # List of terms that are more generic than this one, optional
   #     - anotherBroadTerm                              # *Only local ids*
-  #   hasNarrower:                                      # Same as hasBroader, but for linking to more specific terms
+  #   hasNarrower:                                      # Same as hasBroader, but for linking to more specific terms, optional
   #     - anotherNarrowTerm
-
