Disable check-links in rainbow workflow

--- a/.github/workflows/semantic-uplift.yml
+++ b/.github/workflows/semantic-uplift.yml
@@ -43,5 +43,6 @@ jobs:
           add: '**/*.ttl'
 
   check-links:
+    if: false # disabled
     uses: ./.github/workflows/check-links.yml
     needs: uplift
