--- a/rainbow-data/generic/uplift/sensor-manufacturers-uplift.yml
+++ b/rainbow-data/generic/uplift/sensor-manufacturers-uplift.yml
@@ -64,3 +64,11 @@ context:
     procedures:
       '@id': ssn:implements
       '@type': '@id'
+    sources:
+      '@id': dct:source
+      '@type': '@id'
+      '@context':
+        'label': skos:prefLabel
+        'url':
+          '@id': foaf:homepage
+          '@type': '@id'
