--- a/rainbow-data/generic/uplift/sensor-platforms-uplift.yml
+++ b/rainbow-data/generic/uplift/sensor-platforms-uplift.yml
@@ -71,3 +71,11 @@ context:
     sensors:
       '@id': sosa:hosts
       '@type': '@id'
+    sources:
+      '@id': dct:source
+      '@type': '@id'
+      '@context':
+        'label': skos:prefLabel
+        'url':
+          '@id': foaf:homepage
+          '@type': '@id'
