--- a/rainbow-data/generic/uplift/sensors-uplift.yml
+++ b/rainbow-data/generic/uplift/sensors-uplift.yml
@@ -84,3 +84,11 @@ context:
     manufacturers:
       '@id': sdo:manufacturer
       '@type': '@id'
+    sources:
+      '@id': dct:source
+      '@type': '@id'
+      '@context':
+        'label': skos:prefLabel
+        'url':
+          '@id': foaf:homepage
+          '@type': '@id'
